# EmbeddingSystemConceptV2

./: .env  .gitignore  docker-compose.yml  pyproject.toml
app/: main.py  schemas.py
app/api/: ingest.py  milvus_admin.py  search.py  vectorize.py
app/core/: config.py
app/services/: cache.py  case_loader.py  embeddings.py  milvus.py  vectorizer.py
docs/: vue_frontend_setup.md
frontend/: package-lock.json  package.json  postcss.config.cjs  tailwind.config.js  vite.config.ts
frontend/src/: App.vue  api.ts  main.ts
frontend/src/pages/: SearchPage.vue  StartPage.vue
frontend/src/router/: index.ts
