[project]
name = "embeddingsystemconceptv2"
version = "0.1.0"
description = ""
authors = [
    {name = "Павел Колягин",email = "KolyaginPYu@intech.rshb.ru"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pydantic (>=2.11.5,<3.0.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "torchvision (>=0.22.0,<0.23.0)",
    "numpy (>=2.2.6,<3.0.0)",
    "pymilvus (>=2.5.10,<3.0.0)",
    "redis (>=6.1.0,<7.0.0)",
    "celery (>=5.5.2,<6.0.0)",
    "transformers (>=4.52.3,<5.0.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "protobuf (>=6.31.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch_cpu"}
torchvision = {source = "pytorch_cpu"}
